--- a/docs/src/config/ini-config.adoc
+++ b/docs/src/config/ini-config.adoc
@@ -862,11 +862,9 @@ Finally, no amount of tweaking will speed up a tool path with lots of small, tig
 * `MAX_LINEAR_ACCELERATION = 20.0` - (((MAX ACCELERATION))) The maximum acceleration for any axis or coordinated axis move, in 'machine units' per second per second.
 * `PLANNER_TYPE = 0` - (((PLANNER TYPE))) Selects the trajectory planner type: 0 = trapezoidal (default), 1 = S-curve with jerk limiting.
   S-curve planning is only active when `PLANNER_TYPE = 1` AND `MAX_LINEAR_JERK > 0`.
-* `MAX_LINEAR_JERK = 0.0` - (((MAX JERK))) The maximum jerk (rate of change of acceleration) for coordinated moves, in 'machine units' per second cubed.
-  When set to 0 (default), jerk limiting is disabled.
-  When greater than 0 and `PLANNER_TYPE = 1`, enables S-curve trajectory planning.
-* `DEFAULT_LINEAR_JERK = 0.0` - The default jerk value for coordinated moves, in 'machine units' per second cubed.
-  When set to 0, `MAX_LINEAR_JERK` is used.
+* `MAX_LINEAR_JERK = 10000.0` - (((MAX JERK))) The maximum jerk (rate of change of acceleration) for coordinated moves, in 'machine units' per second cubed.
+  Default is 10000.0.
+  When `PLANNER_TYPE = 1`, this enables S-curve trajectory planning.
 * `POSITION_FILE =` _position.txt_ - If set to a non-empty value, the joint positions are stored between runs in this file.
   This allows the machine to start with the same coordinates it had on shutdown.
   This assumes there was no movement of the machine while powered off.
