--- a/docs/src/man/man1/io.1.adoc
+++ b/docs/src/man/man1/io.1.adoc
@@ -6,7 +6,8 @@ io, iocontrol - interacts with HAL or G-code in non-realtime
 
 == SYNOPSIS
 
-*[EMCIO]* +
+*[EMCIO]*
+
 *EMCIO = io*
 
 == DESCRIPTION
