--- a/docs/src/man/man1/ngcgui.1.adoc
+++ b/docs/src/man/man1/ngcgui.1.adoc
@@ -15,7 +15,7 @@ controller
 
 == SEE ALSO
 
-linuxcnc(1)*
+linuxcnc(1)
 
 Much more information about LinuxCNC and HAL is available in the
 LinuxCNC and HAL User Manuals, found at /usr/share/doc/LinuxCNC/.
