--- a/docs/src/man/man1/qtplasmac_gcode.1.adoc
+++ b/docs/src/man/man1/qtplasmac_gcode.1.adoc
@@ -13,7 +13,7 @@ information. https://linuxcnc.org/docs/devel/html/plasma/qtplasmac.html
 
 == SEE ALSO
 
-linuxcnc(1)*
+linuxcnc(1)
 
 Much more information about LinuxCNC and HAL is available in the
 LinuxCNC and HAL User Manuals, found at /usr/share/doc/LinuxCNC/.
