--- a/docs/src/man/man1/scorbot-er-3.1.adoc
+++ b/docs/src/man/man1/scorbot-er-3.1.adoc
@@ -8,14 +8,14 @@ scorbot-er-3 - to link the Intellitek Scorbot educational robot to LinuxCNC
 
 *scorbot-er-3* is a non-realtime component that interfaces the control box of a Scorbot ER-3 robot arm to the LinuxCNC HAL.
 
-Joint 0:: rotation around the base
-Joint 1:: shoulder
-Joint 2:: elbow
-Joint 3:: wrist (+ is wrist up & rotate hand)
-Joint 4:: wrist (+ is wrist down & rotate hand)
-Joint 5:: unused
-Joint 6:: unused
-Joint 7:: hand open/close (+ is close)
+*Joint 0*:: rotation around the base
+*Joint 1*:: shoulder
+*Joint 2*:: elbow
+*Joint 3*:: wrist (+ is wrist up & rotate hand)
+*Joint 4*:: wrist (+ is wrist down & rotate hand)
+*Joint 5*:: unused
+*Joint 6*:: unused
+*Joint 7*:: hand open/close (+ is close)
 
 == SEE ALSO
 
