--- a/docs/src/man/man1/xhc-hb04.1.adoc
+++ b/docs/src/man/man1/xhc-hb04.1.adoc
@@ -122,30 +122,30 @@ xhc-hb04.stepsize-down (bit in)::
 xhc-hb04.[xyza].pos-absolute (float in)::
   Absolute position display. The LCD display for pos-absolute is fixed
   format with a sign, 4 number digits and 3 fraction digits (+XXXX.XXX),
-  require: -9999.999 <= value <= 9999.999
+  require: -9999.999 \<= value \<= 9999.999
   (typically connect to: `halui.axis.N.pos-feedback`).
 xhc-hb04.[xyza].pos-relative (float in)::
   Relative position display (typically connect to:
   halui.axis.N.pos-relative). The LCD display for pos-relative is fixed
   format with a sign, 4 number digits and 3 fraction digits (+XXXX.XXX),
-  require: -9999.999 <= value <= 9999.999.
+  require: -9999.999 \<= value \<= 9999.999.
 xhc-hb04.feed-override (float in)::
   Feed-override value. The float value is converted to a 16 bit integer
-  and multiplied by 100 in order to display as percent, require: 0 <=
-  pinvalue <= 655 (typically connect to: `halui.feed-override.value`).
+  and multiplied by 100 in order to display as percent, require: 0 \<=
+  pinvalue \<= 655 (typically connect to: `halui.feed-override.value`).
 xhc-hb04.feed-value (float in)::
   Current Feed-value (units/sec). The float value is converted to a 16
   bit integer and multiplied by 60 in order to display as
-  units-per-minute, require: 0 <= pinvalue <= 1092 (65520 units-per-minute)
+  units-per-minute, require: 0 \<= pinvalue \<= 1092 (65520 units-per-minute)
   (typically connect to: `motion.current-vel`).
 xhc-hb04.spindle-override (float in)::
   Spindle-override value. The float value is converted to a 16 bit
   integer and multiplied by 100 in order to display as percent, require:
-  0 <= pinvalue <= 655) (typically connect to: `halui.spindle-override.value`).
+  0 \<= pinvalue \<= 655) (typically connect to: `halui.spindle-override.value`).
 xhc-hb04.spindle-rps (float in)::
   Spindle speed in RPS (revolutions per second).
   The float value is converted to a 16 bit integer and multiplied by 60
-  in order to display as RPMs, require: 0 <= pinvalue <= 1092 (65520 RPM)
+  in order to display as RPMs, require: 0 \<= pinvalue \<= 1092 (65520 RPM)
   (typically connect to: `spindle.N.speed-out-rps-abs`).
 xhc-hb04.inch-icon (bit in)::
   Use inch icon (default is mm):
