Update getting-LinuxCNC. Troxie -> Trixie

--- a/docs/src/getting-started/getting-linuxcnc.adoc
+++ b/docs/src/getting-started/getting-linuxcnc.adoc
@@ -256,7 +256,7 @@ In addition, for experienced users who are familiar with Debian system administr
 [options="header"]
 |===
 | Debian Trixie   | amd64 & arm64 | preempt-rt | linuxcnc-uspace | machine control & simulation
-| Debian Troxie   | amd64         | RTAI       | linuxcnc        | machine control
+| Debian Trixie   | amd64         | RTAI       | linuxcnc        | machine control
 | Distribution    | Architecture  | Kernel     | Package name    | Typical use
 | Debian Bookworm | amd64 & arm64 | preempt-rt | linuxcnc-uspace | machine control & simulation
 | Debian Bookworm | amd64         | RTAI       | linuxcnc        | machine control
