--- a/docs/src/getting-started/updating-linuxcnc.adoc
+++ b/docs/src/getting-started/updating-linuxcnc.adoc
@@ -224,11 +224,34 @@ HOME_SEARCH_VELOCITY = 100 - Accepted but currently does nothing
 HOME_SEQUENCE = 0 - Accepted but currently does nothing
 
 
-== Updating Configuration Files for 2.10.y
+== Updating Configuration Files for 2.10
 
-Touchy: the Touchy MACRO entries should now be placed in a [MACROS]
-section of the INI rather than in the [TOUCHY] section. This is part of
-a process of commonising the INI setting between GUIs. 
+
+=== Spindle names
+
+Some names in the [DISPLAY] section of the INI file have changed:
+
+- `MIN_SPINDLE_OVERRIDE  -> MIN_SPINDLE_0_OVERRIDE`
+- `MAX_SPINDLE_OVERRIDE  -> MAX_SPINDLE_0_OVERRIDE`
+- `DEFAULT_SPINDLE_SPEED -> DEFAULT_SPINDLE_0_SPEED`
+- `MIN_SPINDLE_SPEED     -> MIN_SPINDLE_0_SPEED`
+- `MAX_SPINDLE_SPEED     -> MAX_SPINDLE_0_SPEED`
+
+=== Gmoccapy
+
+- The spindle settings are now defined in the INI-file instead of the gmoccapy preferences:
+[source,{ini}]
+----
+[DISPLAY]
+DEFAULT_SPINDLE_0_SPEED = 450
+MIN_SPINDLE_0_SPEED = 0
+MAX_SPINDLE_0_SPEED = 3000
+----
+
+==== Touchy
+
+The Touchy MACRO entries should now be placed in a [MACROS]
+section of the INI rather than in the [TOUCHY] section. This is part of a process of commonising the INI setting between GUIs.
 
 
 == New HAL components
